--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <!-- example icon --> 
 <div>
   
-  <a href="https://www.instagram.com/moshiadonald/" target="_blank"><i data-feather="instagram"></i></a>
-  <a href="https://www.facebook.com/mathinzadonlad.moshia/" target="_blank"><i data-feather="facebook"></i></a>
-  <a href="https://www.linkedin.com/in/donald-mathibelele-b96b921a8" target="_blank" ><i data-feather="linkedin"></i></a>
-  <a href="https://www.twitter.com/moshiadonald/" target="_blank" ><i data-feather="twitter"></i></a>
+  <a class="insta" href="https://www.instagram.com/moshiadonald/" target="_blank"><i data-feather="instagram"></i></a>
+  <a class="facebok" href="https://www.facebook.com/mathinzadonlad.moshia/" target="_blank"><i data-feather="facebook"></i></a>
+  <a class="linked" href="https://www.linkedin.com/in/donald-mathibelele-b96b921a8" target="_blank" ><i data-feather="linkedin"></i></a>
+  <a class="twiter" href="https://www.twitter.com/moshiadonald/" target="_blank" ><i data-feather="twitter"></i></a>
 
 </div>
 
