--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <img class="profile-img" src ="https://media.licdn.com/dms/image/D4D03AQHrF0Fim6Optw/profile-displayphoto-shrink_200_200/0/1675274319687?e=1683763200&v=beta&t=W8TfLS1b4ezOhQNGakAdkivnz6RfO8oERRdWA1RdHUA" alt="">
   <h4> MATHIBELELE DONALD MOSHIA</h4>
-  <p>Learning front - end web development<a href="http://www.zaio.io/"target="_blank"> @Zaio.io</a></p>
+  <p>Frontend Dev, currently learning at<a href="http://www.zaio.io/"target="_blank"> Zaio.io</a> to make my coding skills more accessible. My dream is to become a software developer.</p>
   
 <!-- example icon --> 
 <div>
